
    create table consultas (
        id integer generated by default as identity,
        medico_id integer not null,
        paciente_id integer not null,
        data_hora timestamp(6) not null,
        descricao TEXT,
        status varchar(255) not null,
        primary key (id)
    );

    create table convenios (
        id integer generated by default as identity,
        codigo_identificacao varchar(255) not null,
        nome varchar(255) not null,
        status enum ('ARQUIVADO','ATIVO','INATIVO') not null,
        primary key (id)
    );

    create table especialidades (
        id integer generated by default as identity,
        possui_vinculo_historico boolean not null,
        nome varchar(100) not null unique,
        descricao varchar(255),
        status enum ('ATIVA','INATIVA') not null,
        primary key (id)
    );

    create table faturamentos (
        paciente_id integer not null,
        valor numeric(10,2) not null,
        valor_padrao numeric(10,2),
        data_hora_faturamento timestamp(6) not null,
        id varchar(36) not null,
        usuario_responsavel varchar(36) not null,
        metodo_pagamento varchar(50) not null,
        descricao_procedimento varchar(255) not null,
        justificativa_valor_diferente TEXT,
        observacoes TEXT,
        status enum ('CANCELADO','INVALIDO','PAGO','PENDENTE','REMOVIDO') not null,
        tipo_procedimento enum ('CONSULTA','EXAME') not null,
        primary key (id)
    );

    create table folha_pagamento (
        beneficios numeric(10,2) not null,
        funcionario_id integer not null,
        id integer generated by default as identity,
        salario_base numeric(10,2) not null,
        periodo_referencia varchar(7) not null,
        metodo_pagamento varchar(50) not null,
        status enum ('CANCELADO','PAGO','PENDENTE') not null,
        tipo_registro enum ('AJUSTE','PAGAMENTO') not null,
        primary key (id)
    );

    create table funcionarios (
        id integer generated by default as identity,
        contato varchar(255) not null,
        funcao varchar(255) not null,
        nome varchar(255) not null,
        status enum ('ATIVO','INATIVO') not null,
        primary key (id)
    );

    create table historico_atualizacoes (
        data_hora_atualizacao timestamp(6) not null,
        atendimento_id varchar(36) not null,
        id varchar(36) not null,
        prontuario_id varchar(36) not null,
        observacoes TEXT not null,
        profissional_responsavel varchar(255) not null,
        status enum ('ARQUIVADO','ATIVO','EXCLUIDO','INATIVADO','INATIVO') not null,
        primary key (id)
    );

    create table historico_clinico (
        paciente_id integer not null,
        data_hora_registro timestamp(6) not null,
        id varchar(36) not null,
        prontuario_id varchar(36) not null,
        conduta TEXT not null,
        diagnostico TEXT not null,
        profissional_responsavel varchar(255) not null,
        sintomas TEXT not null,
        primary key (id)
    );

    create table historico_clinico_anexos (
        historico_id varchar(36) not null,
        anexo_referenciado varchar(255)
    );

    create table historico_consultas (
        consulta_id integer not null,
        responsavel_id integer not null,
        data_hora timestamp(6) not null,
        id bigint generated by default as identity,
        acao varchar(255) not null,
        descricao TEXT,
        primary key (id)
    );

    create table historico_convenio (
        convenio_id integer not null,
        responsavel_id integer not null,
        data_hora timestamp(6) not null,
        id bigint generated by default as identity,
        descricao TEXT,
        acao enum ('ATUALIZACAO','CRIACAO','EXCLUSAO') not null,
        primary key (id)
    );

    create table historico_faturamento (
        data_hora timestamp(6) not null,
        id bigint generated by default as identity,
        faturamento_id varchar(36) not null,
        responsavel_id varchar(36) not null,
        descricao TEXT not null,
        acao enum ('ALTERACAO_STATUS','ATUALIZACAO','CANCELAMENTO','CRIACAO','EXCLUSAO_LOGICA','PAGAMENTO','TENTATIVA_ALTERACAO_NEGADA','TENTATIVA_EXCLUSAO_NEGADA') not null,
        primary key (id)
    );

    create table historico_funcionarios (
        funcionario_id integer not null,
        responsavel_id integer not null,
        data_hora timestamp(6) not null,
        id bigint generated by default as identity,
        descricao TEXT,
        acao enum ('ATUALIZACAO','CRIACAO','EXCLUSAO') not null,
        primary key (id)
    );

    create table historico_medicamentos (
        medicamento_id integer not null,
        responsavel_id integer not null,
        data_hora timestamp(6) not null,
        id bigint generated by default as identity,
        descricao TEXT,
        acao enum ('ARQUIVAMENTO','ATUALIZACAO','CRIACAO','EXCLUSAO','REVISAO_APROVADA','REVISAO_REPROVADA','REVISAO_SOLICITADA') not null,
        primary key (id)
    );

    create table historico_tipos_exames (
        id integer generated by default as identity,
        responsavel_id integer not null,
        tipo_exame_id integer not null,
        data_hora timestamp(6) not null,
        descricao varchar(500) not null,
        acao enum ('ATUALIZACAO','CRIACAO','EXCLUSAO','INATIVACAO') not null,
        primary key (id)
    );

    create table medicamentos (
        id integer generated by default as identity,
        revisao_pendente_id integer unique,
        contraindicacoes TEXT,
        nome varchar(255) not null,
        uso_principal varchar(255) not null,
        status enum ('ARQUIVADO','ATIVO','INATIVO') not null,
        primary key (id)
    );

    create table pacientes (
        paciente_id integer generated by default as identity,
        cpf_paciente varchar(11) not null unique,
        data_nascimento_paciente varchar(255) not null,
        endereco_paciente varchar(255),
        nome_paciente varchar(255) not null,
        telefone_paciente varchar(255) not null,
        primary key (paciente_id)
    );

    create table pacientes_historico (
        ordem_historico integer not null,
        paciente_id integer not null,
        responsavel_paciente_id integer not null,
        data_hora_paciente timestamp(6) not null,
        descricao_paciente varchar(255) not null,
        acao_paciente enum ('ATUALIZACAO','CRIACAO','REMOCAO') not null,
        primary key (ordem_historico, paciente_id)
    );

    create table prontuarios (
        paciente_id integer not null,
        data_hora_criacao timestamp(6) not null,
        atendimento_id varchar(36),
        id varchar(36) not null,
        observacoes_iniciais TEXT,
        profissional_responsavel varchar(255) not null,
        status enum ('ARQUIVADO','ATIVO','EXCLUIDO','INATIVADO','INATIVO') not null,
        primary key (id)
    );

    create table revisoes_pendentes (
        id integer generated by default as identity,
        revisor_id integer,
        solicitante_id integer not null,
        novo_valor TEXT not null,
        status enum ('APROVADA','PENDENTE','REPROVADA') not null,
        primary key (id)
    );

    create table tipos_exames (
        id integer generated by default as identity,
        valor float(53) not null,
        codigo varchar(50) not null unique,
        especialidade varchar(100) not null,
        descricao varchar(255) not null,
        status enum ('ATIVO','INATIVO') not null,
        primary key (id)
    );

    alter table if exists historico_clinico_anexos 
       add constraint FK2mtc60itg34ssg5d3md15il2l 
       foreign key (historico_id) 
       references historico_clinico;

    alter table if exists historico_convenio 
       add constraint FKrfnm7be0kjoqo8mp3qy94tbsw 
       foreign key (convenio_id) 
       references convenios;

    alter table if exists historico_funcionarios 
       add constraint FK3k8w04d5kxtc7t7l7ln26p6s1 
       foreign key (funcionario_id) 
       references funcionarios;

    alter table if exists historico_tipos_exames 
       add constraint FK3foap827c3ouhbwo6x4mts893 
       foreign key (tipo_exame_id) 
       references tipos_exames;

    alter table if exists medicamentos 
       add constraint FKbebxxg58phek8vbxdw8js1mer 
       foreign key (revisao_pendente_id) 
       references revisoes_pendentes;

    alter table if exists pacientes_historico 
       add constraint FKbxjgdqbeupyv30uvqb95ehuh7 
       foreign key (paciente_id) 
       references pacientes;

    create table consultas (
        id integer generated by default as identity,
        medico_id integer not null,
        paciente_id integer not null,
        data_hora timestamp(6) not null,
        descricao TEXT,
        status varchar(255) not null,
        primary key (id)
    );

    create table convenios (
        id integer generated by default as identity,
        codigo_identificacao varchar(255) not null,
        nome varchar(255) not null,
        status enum ('ARQUIVADO','ATIVO','INATIVO') not null,
        primary key (id)
    );

    create table especialidades (
        id integer generated by default as identity,
        possui_vinculo_historico boolean not null,
        nome varchar(100) not null unique,
        descricao varchar(255),
        status enum ('ATIVA','INATIVA') not null,
        primary key (id)
    );

    create table faturamentos (
        paciente_id integer not null,
        valor numeric(10,2) not null,
        valor_padrao numeric(10,2),
        data_hora_faturamento timestamp(6) not null,
        id varchar(36) not null,
        usuario_responsavel varchar(36) not null,
        metodo_pagamento varchar(50) not null,
        descricao_procedimento varchar(255) not null,
        justificativa_valor_diferente TEXT,
        observacoes TEXT,
        status enum ('CANCELADO','INVALIDO','PAGO','PENDENTE','REMOVIDO') not null,
        tipo_procedimento enum ('CONSULTA','EXAME') not null,
        primary key (id)
    );

    create table folha_pagamento (
        beneficios numeric(10,2) not null,
        funcionario_id integer not null,
        id integer generated by default as identity,
        salario_base numeric(10,2) not null,
        periodo_referencia varchar(7) not null,
        metodo_pagamento varchar(50) not null,
        status enum ('CANCELADO','PAGO','PENDENTE') not null,
        tipo_registro enum ('AJUSTE','PAGAMENTO') not null,
        primary key (id)
    );

    create table funcionarios (
        id integer generated by default as identity,
        contato varchar(255) not null,
        funcao varchar(255) not null,
        nome varchar(255) not null,
        status enum ('ATIVO','INATIVO') not null,
        primary key (id)
    );

    create table historico_atualizacoes (
        data_hora_atualizacao timestamp(6) not null,
        atendimento_id varchar(36) not null,
        id varchar(36) not null,
        prontuario_id varchar(36) not null,
        observacoes TEXT not null,
        profissional_responsavel varchar(255) not null,
        status enum ('ARQUIVADO','ATIVO','EXCLUIDO','INATIVADO','INATIVO') not null,
        primary key (id)
    );

    create table historico_clinico (
        paciente_id integer not null,
        data_hora_registro timestamp(6) not null,
        id varchar(36) not null,
        prontuario_id varchar(36) not null,
        conduta TEXT not null,
        diagnostico TEXT not null,
        profissional_responsavel varchar(255) not null,
        sintomas TEXT not null,
        primary key (id)
    );

    create table historico_clinico_anexos (
        historico_id varchar(36) not null,
        anexo_referenciado varchar(255)
    );

    create table historico_consultas (
        consulta_id integer not null,
        responsavel_id integer not null,
        data_hora timestamp(6) not null,
        id bigint generated by default as identity,
        acao varchar(255) not null,
        descricao TEXT,
        primary key (id)
    );

    create table historico_convenio (
        convenio_id integer not null,
        responsavel_id integer not null,
        data_hora timestamp(6) not null,
        id bigint generated by default as identity,
        descricao TEXT,
        acao enum ('ATUALIZACAO','CRIACAO','EXCLUSAO') not null,
        primary key (id)
    );

    create table historico_faturamento (
        data_hora timestamp(6) not null,
        id bigint generated by default as identity,
        faturamento_id varchar(36) not null,
        responsavel_id varchar(36) not null,
        descricao TEXT not null,
        acao enum ('ALTERACAO_STATUS','ATUALIZACAO','CANCELAMENTO','CRIACAO','EXCLUSAO_LOGICA','PAGAMENTO','TENTATIVA_ALTERACAO_NEGADA','TENTATIVA_EXCLUSAO_NEGADA') not null,
        primary key (id)
    );

    create table historico_funcionarios (
        funcionario_id integer not null,
        responsavel_id integer not null,
        data_hora timestamp(6) not null,
        id bigint generated by default as identity,
        descricao TEXT,
        acao enum ('ATUALIZACAO','CRIACAO','EXCLUSAO') not null,
        primary key (id)
    );

    create table historico_medicamentos (
        medicamento_id integer not null,
        responsavel_id integer not null,
        data_hora timestamp(6) not null,
        id bigint generated by default as identity,
        descricao TEXT,
        acao enum ('ARQUIVAMENTO','ATUALIZACAO','CRIACAO','EXCLUSAO','REVISAO_APROVADA','REVISAO_REPROVADA','REVISAO_SOLICITADA') not null,
        primary key (id)
    );

    create table historico_tipos_exames (
        id integer generated by default as identity,
        responsavel_id integer not null,
        tipo_exame_id integer not null,
        data_hora timestamp(6) not null,
        descricao varchar(500) not null,
        acao enum ('ATUALIZACAO','CRIACAO','EXCLUSAO','INATIVACAO') not null,
        primary key (id)
    );

    create table medicamentos (
        id integer generated by default as identity,
        revisao_pendente_id integer unique,
        contraindicacoes TEXT,
        nome varchar(255) not null,
        uso_principal varchar(255) not null,
        status enum ('ARQUIVADO','ATIVO','INATIVO') not null,
        primary key (id)
    );

    create table pacientes (
        paciente_id integer generated by default as identity,
        cpf_paciente varchar(11) not null unique,
        data_nascimento_paciente varchar(255) not null,
        endereco_paciente varchar(255),
        nome_paciente varchar(255) not null,
        telefone_paciente varchar(255) not null,
        primary key (paciente_id)
    );

    create table pacientes_historico (
        ordem_historico integer not null,
        paciente_id integer not null,
        responsavel_paciente_id integer not null,
        data_hora_paciente timestamp(6) not null,
        descricao_paciente varchar(255) not null,
        acao_paciente enum ('ATUALIZACAO','CRIACAO','REMOCAO') not null,
        primary key (ordem_historico, paciente_id)
    );

    create table prontuarios (
        paciente_id integer not null,
        data_hora_criacao timestamp(6) not null,
        atendimento_id varchar(36),
        id varchar(36) not null,
        observacoes_iniciais TEXT,
        profissional_responsavel varchar(255) not null,
        status enum ('ARQUIVADO','ATIVO','EXCLUIDO','INATIVADO','INATIVO') not null,
        primary key (id)
    );

    create table revisoes_pendentes (
        id integer generated by default as identity,
        revisor_id integer,
        solicitante_id integer not null,
        novo_valor TEXT not null,
        status enum ('APROVADA','PENDENTE','REPROVADA') not null,
        primary key (id)
    );

    create table tipos_exames (
        id integer generated by default as identity,
        valor float(53) not null,
        codigo varchar(50) not null unique,
        especialidade varchar(100) not null,
        descricao varchar(255) not null,
        status enum ('ATIVO','INATIVO') not null,
        primary key (id)
    );

    alter table if exists historico_clinico_anexos 
       add constraint FK2mtc60itg34ssg5d3md15il2l 
       foreign key (historico_id) 
       references historico_clinico;

    alter table if exists historico_convenio 
       add constraint FKrfnm7be0kjoqo8mp3qy94tbsw 
       foreign key (convenio_id) 
       references convenios;

    alter table if exists historico_funcionarios 
       add constraint FK3k8w04d5kxtc7t7l7ln26p6s1 
       foreign key (funcionario_id) 
       references funcionarios;

    alter table if exists historico_tipos_exames 
       add constraint FK3foap827c3ouhbwo6x4mts893 
       foreign key (tipo_exame_id) 
       references tipos_exames;

    alter table if exists medicamentos 
       add constraint FKbebxxg58phek8vbxdw8js1mer 
       foreign key (revisao_pendente_id) 
       references revisoes_pendentes;

    alter table if exists pacientes_historico 
       add constraint FKbxjgdqbeupyv30uvqb95ehuh7 
       foreign key (paciente_id) 
       references pacientes;
