@startuml

skinparam componentStyle uml2

package "'Prontuario' Aggregate" <<Rectangle>> {
	class HistoricoRegistradoEvento <<(E,#ff9f4b) Domain Event>> {
		ProntuarioId_Pront prontuario
		HistoricoClinico registro
	}
	class Prontuario <<(A,#fffab8) Aggregate Root>> {
		String status
		ProntuarioId_Pront id
		PacienteId_Adm paciente
		List<HistoricoClinico> historico
		HistoricoRegistradoEvento adicionarHistorico(HistoricoClinico registro)
	}
	class HistoricoClinico <<(E,DarkSeaGreen) Entity>> {
		String sintomas
		String diagnostico
		String condutaTratamento
		Date dataRegistro
		Profissional profissional
	}
	class ProntuarioId_Pront <<(V,DarkSeaGreen) Value Object>> {
		String codigo
	}
	class Profissional <<(V,DarkSeaGreen) Value Object>> {
		String nome
		MedicoId_Adm medico
	}
}
HistoricoRegistradoEvento --> HistoricoClinico : registro
HistoricoClinico --> Profissional : profissional
HistoricoRegistradoEvento --> ProntuarioId_Pront : prontuario
Prontuario --> ProntuarioId_Pront : id
Prontuario "1" *--> "*" HistoricoClinico : historico


@enduml
